Example/AwesomeMvcDemo/AwesomeMvcDemo/Views/Error/Expected.aspx
<%@ Page Title="Title" Language="C#" Inherits="System.Web.Mvc.ViewPage<object>" MasterPageFile="~/Views/Shared/Site.Master" %>
<asp:Content runat="server" ID="Title" ContentPlaceHolderID="TitleContent"></asp:Content>
<asp:Content runat="server" ID="Main" ContentPlaceHolderID="MainContent">
<%:ViewData["message"] %>
</asp:Content>
